@@ -139,6 +139,21 @@ name|common
 operator|.
 name|cloud
 operator|.
+name|ClusterState
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|cloud
+operator|.
 name|Replica
 import|;
 end_import
@@ -744,6 +759,11 @@ specifier|final
 name|SolrZkClient
 name|zkClient
 decl_stmt|;
+DECL|field|zkStateReader
+specifier|protected
+name|ZkStateReader
+name|zkStateReader
+decl_stmt|;
 DECL|field|shardId
 specifier|protected
 name|String
@@ -829,6 +849,12 @@ operator|.
 name|leaderElector
 operator|=
 name|leaderElector
+expr_stmt|;
+name|this
+operator|.
+name|zkStateReader
+operator|=
+name|zkStateReader
 expr_stmt|;
 name|this
 operator|.
@@ -1396,7 +1422,187 @@ literal|null
 assert|;
 name|ZkNodeProps
 name|m
+decl_stmt|;
+name|ClusterState
+name|clusterState
 init|=
+name|zkStateReader
+operator|.
+name|getClusterState
+argument_list|()
+decl_stmt|;
+name|Replica
+name|rep
+init|=
+operator|(
+name|clusterState
+operator|==
+literal|null
+operator|)
+condition|?
+literal|null
+else|:
+name|clusterState
+operator|.
+name|getReplica
+argument_list|(
+name|collection
+argument_list|,
+name|leaderProps
+operator|.
+name|getStr
+argument_list|(
+name|ZkStateReader
+operator|.
+name|CORE_NODE_NAME_PROP
+argument_list|)
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|rep
+operator|!=
+literal|null
+operator|&&
+name|rep
+operator|.
+name|getState
+argument_list|()
+operator|!=
+name|Replica
+operator|.
+name|State
+operator|.
+name|ACTIVE
+condition|)
+block|{
+name|m
+operator|=
+name|ZkNodeProps
+operator|.
+name|fromKeyVals
+argument_list|(
+name|Overseer
+operator|.
+name|QUEUE_OPERATION
+argument_list|,
+name|OverseerAction
+operator|.
+name|STATE
+operator|.
+name|toLower
+argument_list|()
+argument_list|,
+name|ZkStateReader
+operator|.
+name|STATE_PROP
+argument_list|,
+name|Replica
+operator|.
+name|State
+operator|.
+name|ACTIVE
+operator|.
+name|toString
+argument_list|()
+argument_list|,
+name|ZkStateReader
+operator|.
+name|SHARD_ID_PROP
+argument_list|,
+name|shardId
+argument_list|,
+name|ZkStateReader
+operator|.
+name|COLLECTION_PROP
+argument_list|,
+name|collection
+argument_list|,
+name|ZkStateReader
+operator|.
+name|BASE_URL_PROP
+argument_list|,
+name|leaderProps
+operator|.
+name|getProperties
+argument_list|()
+operator|.
+name|get
+argument_list|(
+name|ZkStateReader
+operator|.
+name|BASE_URL_PROP
+argument_list|)
+argument_list|,
+name|ZkStateReader
+operator|.
+name|NODE_NAME_PROP
+argument_list|,
+name|leaderProps
+operator|.
+name|getProperties
+argument_list|()
+operator|.
+name|get
+argument_list|(
+name|ZkStateReader
+operator|.
+name|NODE_NAME_PROP
+argument_list|)
+argument_list|,
+name|ZkStateReader
+operator|.
+name|CORE_NODE_NAME_PROP
+argument_list|,
+name|leaderProps
+operator|.
+name|getProperties
+argument_list|()
+operator|.
+name|get
+argument_list|(
+name|ZkStateReader
+operator|.
+name|CORE_NODE_NAME_PROP
+argument_list|)
+argument_list|,
+name|ZkStateReader
+operator|.
+name|CORE_NAME_PROP
+argument_list|,
+name|leaderProps
+operator|.
+name|getProperties
+argument_list|()
+operator|.
+name|get
+argument_list|(
+name|ZkStateReader
+operator|.
+name|CORE_NAME_PROP
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Overseer
+operator|.
+name|getInQueue
+argument_list|(
+name|zkClient
+argument_list|)
+operator|.
+name|offer
+argument_list|(
+name|Utils
+operator|.
+name|toJSON
+argument_list|(
+name|m
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+name|m
+operator|=
 name|ZkNodeProps
 operator|.
 name|fromKeyVals
@@ -1455,21 +1661,8 @@ name|ZkStateReader
 operator|.
 name|CORE_NAME_PROP
 argument_list|)
-argument_list|,
-name|ZkStateReader
-operator|.
-name|STATE_PROP
-argument_list|,
-name|Replica
-operator|.
-name|State
-operator|.
-name|ACTIVE
-operator|.
-name|toString
-argument_list|()
 argument_list|)
-decl_stmt|;
+expr_stmt|;
 name|Overseer
 operator|.
 name|getInQueue
